# delta-lake-definitive-guide

./: .gitignore  README.md  chapter_9.ipynb
ch01/: README.md
ch02/: README.md
ch03/: README.md  ch3-1-sql.ipynb  ch3-2-python.ipynb
ch04/: .gitignore  README.md
ch04/flink/: .env  docker-compose-arm64-flink.yaml
ch04/rust/: README.md
ch04/trinodb/: README.md
ch05/: .env  .gitignore  README.md  ch05_notebook.ipynb  ch05_notebook_extras.ipynb  docker-compose-arm64-flink.yaml  docker-compose-ch05-arm64.yaml  docker-compose-ch05.yaml  docker-compose-flink.yaml
ch05/rust/kafka-delta-ingest/ecomm-ingest/: Cargo.toml
ch05/rust/kafka-delta-ingest/ecomm-ingest/src/: main.rs
ch06/: README.md  ch6_notebook_extras.ipynb  chp6_notebook.ipynb  python-snippets.md
ch07/: README.md  chapter_7.ipynb
ch08/: .gitignore  Makefile  README.md  ch08.ipynb
ch08/lambda/hello-delta-rust/: .gitignore  Cargo.toml
ch08/lambda/hello-delta-rust/src/: main.rs
ch09/: README.md  chapter_9.ipynb  docker-compose-arm64.yaml  docker-compose.yaml  startup.sh
ch10/: README.md  ch10.ipynb  chapter_10.ipynb
ch11/: README.md
ch12/: README.md  chapter_12.ipynb  chapter_12_bonus.ipynb
ch13/: README.md
ch14/: README.md
ch14/delta-sharing/python/delta-sharing-dldg/: pyproject.toml
ch14/delta-sharing/python/delta-sharing-dldg/delta_sharing_dldg/: __init__.py
ch14/delta-sharing/python/delta-sharing-dldg/tests/: test_sharing.py
ch6/: README.md  ch6_notebook.ipynb  ch6_notebook_extras.ipynb  chp6_covid_notebook.ipynb  chp6_notebook.ipynb  docker-compose-chp6.yaml
(+318 files in other folders)
