[package]
name = "hello-delta-rust"
version = "0.1.0"
edition = "2021"
[dependencies]
deltalake-aws = "0.1.0"
deltalake-core = "0.17.0"
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

